# scholarlint-demo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  auth.py  brand_report.py  checklists.py  config.py  credits.py  database.py  dependencies.py  logging_config.py  main.py  models.py  models_db.py  monitoring.py  payment.py  secrets_manager.py  secrets_setup.py  storage.py
docs/: API_OVERVIEW.md  ARCHITECTURE.md  BACKUP.md  CONFIGURATION.md  DEPLOY_SAFE.md  DEPLOY_TENCENT.md  DO_NOT_DO.md  LOCAL_RUN.md  README.md  RELEASE_CHECKLIST.md  TESTING_GUIDE.md
research/: method_design.md  related_work.md
scripts/: backup_data.py  check-inline-js.mjs  check-no-secrets.mjs  patch_gate_data.py  secret-scan.mjs  test-js-helpers.mjs
tests/: conftest.py  test_ai_integrity.py  test_ai_routes.py  test_api_token_auth.py  test_auth_payment_security.py  test_backup_data.py  test_check_folder.py  test_checklists.py  test_dimension_scores.py  test_e2e_minimal.py  test_edit_history.py  test_export_report.py  test_file_store.py  test_format_normalizer.py  test_gates.py  test_health.py  test_job_ownership.py  test_job_state.py  test_legacy_owner_strict.py  test_parsers.py  test_permissions_service.py  test_redact.py  test_reference_resilience.py  test_security_headers.py  test_session_cookie_secure.py  test_share_report_redaction.py  test_style_analysis.py  test_upload_api.py
(+68 files in other folders)
