[project]
name = "integrity-assurance"
version = "0.1.0"
description = "Academic integrity assurance system - pre-submission quality gate for research papers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "bibtexparser>=1.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "email-validator>=2.0.0",
    "jinja2>=3.1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
    "keyring>=24.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "bcrypt>=4.0",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "pip-audit>=2.7",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
